# word-salat

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  text.txt  text_scrambled.txt  word_salat.py
.github/workflows/: ci.yml
results/: decoded_scores.md
src/: __init__.py  cli.py  core.py  py.typed  scoring.py
tests/: test_cli.py  test_core.py  test_scoring.py  test_word_salat.py
text_decoded/: gemini-2.5-flash.txt  gemini-2.5-pro.txt  github-copilot_claude-sonnet-4.5.txt  gpt-5-thinking.txt
